--- a/app/src/main/res/layout/activity_cardapio.xml
+++ b/app/src/main/res/layout/activity_cardapio.xml
@@ -45,6 +45,43 @@
                 tools:text="China in box" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/accent_200"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/cardapioVerCarrinhoText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@string/cardapio_carrinho_text"
+                android:textColor="@color/white_500" />
+
+            <TextView
+                android:id="@+id/cardapioQntCarrinhoText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@string/cardapio_qtd_text"
+                android:textColor="@color/white_500" />
+
+            <TextView
+                android:id="@+id/cardapioCarrinhoTotalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@string/cardapio_reais_text"
+                android:textColor="@color/white_500" />
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerProdutosCardapio"
             android:layout_width="match_parent"
