--- a/app/src/main/res/menu/menu_empresa.xml
+++ b/app/src/main/res/menu/menu_empresa.xml
@@ -7,7 +7,13 @@
         android:id="@+id/menuNovoProduto"
         android:title="@string/menu_add_text"
         android:icon="@drawable/ic_add_24"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/menuPedidos"
+        android:title="@string/menu_pedidos_text"
+        android:icon="@drawable/ic_pedido_black_24"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/menuConfiguracoes"
